--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Фон как в фильме 'Матрица'
 2D анимация на холсте
 
-<a href="https://valerii-a.github.io/Matrix/">Открыть сайт</a>
+<a href="https://valerii-a.github.io/Matrix/" >
+      Открыть сайт
+          </a>
