--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-<a href="https://valerii-a.github.io/Matrix/">
-      Открыть сайт
-          </a>
-
 Фон как в фильме 'Матрица'
 2D анимация на холсте
 
+[Открыть сайт](https://valerii-a.github.io/Matrix/)
